--- a/pom.xml
+++ b/pom.xml
@@ -22,9 +22,18 @@
   
   <properties>       
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    <java.version>1.8</java.version>
     <junit.version>4.12</junit.version>
-  </properties>    
+    <slf4j.version>1.7.25</slf4j.version>
+  </properties>
+         
   <dependencies>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>${slf4j.version}</version>
+    </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
