--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
   <description> Created as a means to reuse cherry picked best practices. </description>
   <developers>
     <developer>
-      <name>Arien Kock</name>
+      <name>Abhishek Pandey</name>
     </developer>
   </developers>
   
@@ -114,6 +114,56 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.20</version>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-release-plugin</artifactId>
+        <version>2.5.3</version>  
+        <configuration>
+          <autoVersionSubmodules>true</autoVersionSubmodules>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+        <version>3.0.1</version>  
+        <executions>
+          <execution>
+            <id>attach-sources</id>      
+            <phase>verify</phase>      
+            <goals>        
+              <goal>jar-no-fork</goal>
+            </goals>    
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-enforcer-plugin</artifactId>
+        <version>1.4.1</version><executions>
+        <execution>
+          <id>enforce-maven</id>
+          <goals>
+            <goal>enforce</goal>
+          </goals>
+          <configuration>
+            <rules>
+              <requireMavenVersion><version>(,3.0),[3.0.4,)</version>
+              <message>
+                Build with Maven 3.0.4 or later. Maven 3.0 through3.0.3 inclusive do not pass correct settings.xml to MavenRelease Plugin.
+              </message>
+              </requireMavenVersion>
+              <bannedDependencies>
+                <excludes>
+                  <exclude>commons-logging:commons-logging</exclude>
+                  <exclude>commons-logging:commons-logging-api</exclude>
+                </excludes>
+              </bannedDependencies>
+            </rules>
+            <fail>true</fail>
+          </configuration>
+        </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
