--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,12 @@
-language: java
-jdk: oraclejdk8
+language:
+  java
+jdk:
+  oraclejdk8
 sudo: false
-cache:  directories:  - $HOME/.m2
-script: mvn clean verify cobertura:cobertura install
-
-after_success:  - bash <(curl -s https://codecov.io/bash)
+cache:
+  directories:
+    - $HOME/.m2
+script:
+  mvn clean verify cobertura:cobertura install
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
