--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,7 @@
   </dependencies>
   
   <build>
+    <sourceDirectory>src/main/java</sourceDirectory>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -212,6 +213,7 @@
         <configuration>
           <formats>
             <format>xml</format>
+            <format>html</format>
           </formats>
         </configuration>
       </plugin>
