--- a/pom.xml
+++ b/pom.xml
@@ -1,23 +1,28 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.abhiesa.blog</groupId>
-  <artifactId>java-cs-to-enterprise</artifactId>
-  <version>1.0</version>
-  <packaging>jar</packaging>
-  <name>Java CS to Enterprise</name>
-  <url>http://abhiesa.com</url>
-  <description> Created as a means to reuse cherry picked best practices. </description>
-  <developers>
-    <developer>
-      <name>Abhishek Pandey</name>
-    </developer>
-  </developers>
-  <prerequisites>
-    <maven>3.0.1</maven>
-  </prerequisites>
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>    <java.version>1.8</java.version>    <junit.version>4.12</junit.version>    <slf4j.version>1.7.25</slf4j.version>  </properties>
-  <dependencyManagement>    <dependencies>      <dependency>        <groupId>org.slf4j</groupId>        <artifactId>slf4j-api</artifactId>        <version>${slf4j.version}</version>      </dependency>      <dependency>        <groupId>junit</groupId>        <artifactId>junit</artifactId>        <version>${junit.version}</version>        <scope>test</scope>      </dependency>    </dependencies>  </dependencyManagement>
+<modelVersion>4.0.0</modelVersion>
+<groupId>com.abhiesa.blog</groupId>
+<artifactId>java-cs-to-enterprise</artifactId>
+<version>1.0</version>
+<packaging>jar</packaging>
+<name>Java CS to Enterprise</name>
+<url>http://abhiesa.com</url>
+<description> Created as a means to reuse cherry picked best practices. </description>
+<developers>
+<developer>
+<name>Abhishek Pandey</name>
+</developer>
+</developers>
+<prerequisites>
+<maven>3.0.1</maven>
+</prerequisites>
+<properties>
+<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+<java.version>1.8</java.version>
+<junit.version>4.12</junit.version>
+<slf4j.version>1.7.25</slf4j.version>
+</properties>
+<dependencyManagement>    <dependencies>      <dependency>        <groupId>org.slf4j</groupId>        <artifactId>slf4j-api</artifactId>        <version>${slf4j.version}</version>      </dependency>      <dependency>        <groupId>junit</groupId>        <artifactId>junit</artifactId>        <version>${junit.version}</version>        <scope>test</scope>      </dependency>    </dependencies>  </dependencyManagement>
   <dependencies>    <dependency>      <groupId>org.slf4j</groupId>      <artifactId>slf4j-api</artifactId>    </dependency>    <dependency>      <groupId>junit</groupId>      <artifactId>junit</artifactId>      <scope>test</scope>    </dependency>  </dependencies>
   <build>    <sourceDirectory>src/main/java</sourceDirectory>    <plugins>      <plugin>        <groupId>org.apache.maven.plugins</groupId>        <artifactId>maven-compiler-plugin</artifactId>        <version>3.6.1</version>        <configuration>          <compilerId>javac-with-errorprone</compilerId>          <source>${java.version}</source>          <target>${java.version}</target>          <compilerArgs>            <arg>-Xlint</arg>          </compilerArgs>          <forceJavacCompilerUse>true</forceJavacCompilerUse>          <useIncrementalCompilation>false</useIncrementalCompilation>        </configuration>        <dependencies>          <dependency>            <groupId>org.codehaus.plexus</groupId>            <artifactId>plexus-compiler-javac-errorprone</artifactId>            <version>2.8.1</version>          </dependency>        </dependencies>      </plugin>      <plugin>        <groupId>org.apache.maven.plugins</groupId>        <artifactId>maven-clean-plugin</artifactId>        <version>3.0.0</version>      </plugin>      <plugin>        <groupId>org.apache.maven.plugins</groupId>        <artifactId>maven-deploy-plugin</artifactId>        <version>2.8.2</version>      </plugin>      <plugin>        <groupId>org.apache.maven.plugins</groupId>        <artifactId>maven-install-plugin</artifactId>        <version>2.5.2</version>      </plugin>      <plugin>        <groupId>org.apache.maven.plugins</groupId>        <artifactId>maven-jar-plugin</artifactId>        <version>3.0.2</version>      </plugin>      <plugin>        <groupId>org.apache.maven.plugins</groupId>        <artifactId>maven-resources-plugin</artifactId>        <version>3.0.2</version>      </plugin>      <plugin>        <groupId>org.apache.maven.plugins</groupId>        <artifactId>maven-site-plugin</artifactId>        <version>3.6</version>      </plugin>      <plugin>        <groupId>org.apache.maven.plugins</groupId>        <artifactId>maven-surefire-plugin</artifactId>        <version>2.20</version>      </plugin>      <plugin>        <groupId>org.apache.maven.plugins</groupId>        <artifactId>maven-release-plugin</artifactId>        <version>2.5.3</version>        <configuration>          <autoVersionSubmodules>true</autoVersionSubmodules>        </configuration>      </plugin>      <plugin>        <groupId>org.apache.maven.plugins</groupId>        <artifactId>maven-source-plugin</artifactId>        <version>3.0.1</version>          <executions>          <execution>            <id>attach-sources</id>            <phase>verify</phase>            <goals>              <goal>jar-no-fork</goal>            </goals>          </execution>        </executions>      </plugin>      <plugin>        <groupId>org.apache.maven.plugins</groupId>        <artifactId>maven-enforcer-plugin</artifactId>        <version>1.4.1</version><executions>        <execution>          <id>enforce-maven</id>          <goals>            <goal>enforce</goal>          </goals>          <configuration>            <rules>              <requireMavenVersion><version>(,3.0),[3.0.4,)</version>              <message>                Build with Maven 3.0.4 or later. Maven 3.0 through3.0.3 inclusive do not pass correct settings.xml to MavenRelease Plugin.              </message>              </requireMavenVersion>              <bannedDependencies>                <excludes>                  <exclude>commons-logging:commons-logging</exclude>                  <exclude>commons-logging:commons-logging-api</exclude>                </excludes>              </bannedDependencies>            </rules>            <fail>true</fail>          </configuration>        </execution>        </executions>      </plugin>
       <plugin>        <groupId>org.codehaus.mojo</groupId>        <artifactId>findbugs-maven-plugin</artifactId>        <version>3.0.4</version>        <configuration>          <excludeFilterFile>src/build/findbugs-exclude.xml</excludeFilterFile>          <threshold>Normal</threshold>          <effort>Max</effort>          <xmlOutput>true</xmlOutput>        </configuration>      </plugin>
