--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,18 @@ script:
 after_success:
   - bash <(curl -s https://codecov.io/bash)
 deploy:
-  provider: pages
-  skip_cleanup: true
-  github_token: $GITHUB_TOKEN # Set in travis-ci.org dashboard 857a312c449a1869a6e361479c73bff25036c9ee
-  local_dir: target/site
-  on:
-    branch: master
+  - provider: pages
+    skip_cleanup: true
+    github_token: $GITHUB_TOKEN
     local_dir: target/site
+    on:
+      branch: master
+      local_dir: target/site
+  - provider: releases
+    api_key: $GITHUB_TOKEN
+    skip_cleanup: true
+    file:
+        - "target/java-cs-to-enterprise-1.0.0.jar"
+        - "target/java-cs-to-enterprise-1.0.0-sources.jar"
+    on:
+        tags: true
