--- a/pom.xml
+++ b/pom.xml
@@ -167,6 +167,12 @@
         <version>0.7.9</version>
         <executions>
           <execution>
+            <id>prepare-agent</id>
+            <goals>
+              <goal>prepare-agent</goal>
+            </goals>
+          </execution>
+          <execution>
             <id>pre-unit-test</id>
             <goals>
               <goal>prepare-agent</goal>
@@ -226,6 +232,14 @@
             </configuration>
           </execution>
         </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.eluder.coveralls</groupId>
+        <artifactId>coveralls-maven-plugin</artifactId>
+        <version>4.3.0</version>
+        <configuration>
+          <repoToken>yourcoverallsprojectrepositorytoken</repoToken>
+        </configuration>
       </plugin>
     </plugins>
     <pluginManagement>
