--- a/pom.xml
+++ b/pom.xml
@@ -178,7 +178,7 @@
               <goal>prepare-agent</goal>
             </goals>
             <configuration>
-              <destFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</destFile>
+              <!--<destFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</destFile>-->
               <propertyName>surefireArgLine</propertyName>
             </configuration>
           </execution>
@@ -188,16 +188,12 @@
             <goals>
               <goal>report</goal>
             </goals>
-            <configuration>
+            <!--<configuration>
               <dataFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</dataFile>
               <outputDirectory>${project.reporting.outputDirectory}/jacoco-ut</outputDirectory>
-            </configuration>
+            </configuration>-->
           </execution>
-          <!-- The Executions required by unit tests are omitted. -->
           <!--
-              Prepares the property pointing to the JaCoCo runtime agent which
-              is passed as VM argument when Maven the Failsafe plugin is executed.
-          -->
           <execution>
             <id>pre-integration-test</id>
             <phase>pre-integration-test</phase>
@@ -205,19 +201,10 @@
               <goal>prepare-agent</goal>
             </goals>
             <configuration>
-              <!-- Sets the path to the file which contains the execution data. -->
               <destFile>${project.build.directory}/coverage-reports/jacoco-it.exec</destFile>
-              <!--
-                  Sets the name of the property containing the settings
-                  for JaCoCo runtime agent.
-              -->
               <propertyName>failsafeArgLine</propertyName>
             </configuration>
           </execution>
-          <!--
-              Ensures that the code coverage report for integration tests after
-              integration tests have been run.
-          -->
           <execution>
             <id>post-integration-test</id>
             <phase>post-integration-test</phase>
@@ -225,21 +212,20 @@
               <goal>report</goal>
             </goals>
             <configuration>
-              <!-- Sets the path to the file which contains the execution data. -->
               <dataFile>${project.build.directory}/coverage-reports/jacoco-it.exec</dataFile>
-              <!-- Sets the output directory for the code coverage report. -->
               <outputDirectory>${project.reporting.outputDirectory}/jacoco-it</outputDirectory>
             </configuration>
           </execution>
+          -->
         </executions>
       </plugin>
       <plugin>
         <groupId>org.eluder.coveralls</groupId>
         <artifactId>coveralls-maven-plugin</artifactId>
         <version>4.3.0</version>
-        <configuration>
+        <!--<configuration>
           <repoToken>JiSioExAaPhLFVObWWjqZapnd3kOI2yDZ</repoToken>
-        </configuration>
+        </configuration>-->
       </plugin>
     </plugins>
     <pluginManagement>
