Fixing Project reports, and License

--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,29 @@
   <prerequisites>
     <maven>3.0.1</maven>
   </prerequisites>
-
+  <ciManagement>
+    <url>https://travis-ci.org/abhiesa/Java-CS-to-Enterprise</url>
+  </ciManagement>
+  <licenses>
+    <license>
+      <url>http://creativecommons.org/licenses/by-nc/4.0/</url>
+    </license>
+  </licenses>
+  <scm>
+    <url>https://github.com/abhiesa/Java-CS-to-Enterprise</url>
+  </scm>
+  <inceptionYear>2017</inceptionYear>
+  <issueManagement>
+    <url>https://github.com/abhiesa/Java-CS-to-Enterprise/issues</url>
+  </issueManagement>
+  <contributors>
+    <contributor>
+      <name>Abhishek Pandey</name>
+      <email>abhiesa@outlook.com</email>
+      <organization>abhiesa</organization>
+      <organizationUrl>http://abhiesa.com</organizationUrl>
+    </contributor>
+  </contributors>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -490,18 +512,18 @@
           <reportSet>
             <reports>
               <report>cim</report>
-              <report>dependencies</report>
-              <report>dependency-convergence</report>
-              <report>dependency-info</report>
-              <report>dependency-management</report>
-              <report>distribution-management</report>
+              <!--<report>dependencies</report>-->
+              <!--<report>dependency-convergence</report>-->
+              <!--<report>dependency-info</report>-->
+              <!--<report>dependency-management</report>-->
+              <!--<report>distribution-management</report>-->
               <report>index</report>
               <report>issue-tracking</report>
               <report>license</report>
-              <report>mailing-list</report>
-              <report>modules</report>
-              <report>plugin-management</report>
-              <report>plugins</report>
+              <!--<report>mailing-list</report>-->
+              <!--<report>modules</report>-->
+              <!--<report>plugin-management</report>-->
+              <!--<report>plugins</report>-->
               <report>project-team</report>
               <report>scm</report>
               <report>summary</report>
